samples/invalid_files/wrong_link_sep.nts
# Admiral Business Machines 1954-2042
# One and gate

.chipsets:
input		a
input		b
output		s
and 		gate#cc

#commentary
.links:
a:1		gate=1#toto
b:1		gate=2
s:1		gate=3
